# lyrics-translate-web-app

./: Dockerfile  README.md  app.py  cfg.py  docker-compose.yaml  lyrics.py  pyproject.toml  requirements.txt
static/styles/: translate.css
templates/: home.html  translate.html
